--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -1,5 +1,5 @@
 <div class="card-container">
-  <md-card x-large class="sample-content">Your Content Here</md-card>
+  <md-card x-large class="sample-content">Meet-Up Event Planner</md-card>
   <md-card>
     For hot module reloading run
     <pre>npm run start:hmr</pre>
